# hoca

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.hermes/: config.example.yaml
.openhands/: setup.sh
docker/: Dockerfile.sandbox
docs/: agent-adapters.md  downgrade-rules.md  fleet-orchestration.md  hard-blocker-rules.md  pr-preparation-18-2.md  security-model.md
hermes-profiles/: README.md
hermes-skills/: hoca-manager.md  hoca-pr-publisher.md  hoca-reviewer-qa.md  hoca-sandbox-policy.md  hoca-worker-openhands.md  hoca.md
hoca/: __init__.py  agent_adapters.py  agent_sessions.py  arbitration.py  cli.py  config.py  conflict_planner.py  context_pack.py  contracts.py  control_paths.py  definition_of_ready.py  dev_branch.py  doctor.py  downgrade_rules.py  env_allowlist.py  fleet_contracts.py  fleet_monitor.py  fleet_reconcile.py  fleet_registry.py  fleet_resources.py  git_utils.py  hard_blockers.py  kanban_bridge.py  legacy_tools.py  merge_readiness.py  model_pool.py  monitor.py  notifications.py  paths.py  pr_body.py  pr_readiness.py  profiles.py  project_memory.py  redaction.py  resource_governor.py  review_fanout.py  review_gate.py  review_report_parser.py  reviewer_hermes.py  risk.py  (+18 more)
models/: Modelfile  Modelfile.14b  Modelfile.7b
scripts/: acceptance-test.sh  auto-merge-guards.sh  check-browsing.sh  check-definition-of-ready.sh  clear-role-model-env.sh  commit-after-staging.sh  create-pr.sh  generate-task-report.sh  generate-task-spec.sh  hoca-doctor.sh  init-project.sh  install.sh  kanban-init.sh  kanban-run.sh  (+20 more)
(+123 files in other folders)
