[project]
name = "hoca"
version = "1.0.0"
description = "Local-first autonomous engineering workflow using Hermes, OpenHands, multi-provider LLMs, and GitHub CLI."
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
  "click>=8.1.0",
  "python-dotenv>=1.0.0",
  "flask>=3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[project.scripts]
hoca = "hoca.cli:main"

[tool.ruff]
line-length = 100

[tool.setuptools]
packages = ["hoca"]

[tool.pytest.ini_options]
testpaths = ["tests"]
